--- a/programmazione.html
+++ b/programmazione.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-<title>Home</title>
+<title>Programmazione</title>
 </head>
 <body>
-	<a href="/accedi">Login</a> <br/>
-	<a href="/registrati">Registrati</a> <br/>
-	<a href="/personale">Controlla i tuoi dati e le tue prenotazioni</a> <br/>
+	<a href="/">Torna</a>
+	
 	{% if proiezioni %}
 	<table>
 		<tr>
@@ -24,6 +23,5 @@
 		{% endfor %}
 	</table>
 	{% endif %}
-	<a href="/programmazione">Programmazione completa</a>
 </body>
 </html>
