--- a/gestione.html
+++ b/gestione.html
@@ -5,5 +5,9 @@
 <body>
 Bruh
 	<a href="/">Torna</a>
+	<a href="/">Gestione film</a>
+	<a href="/">Gestione proiezioni</a>
+	<a href="/">Gestione autorizzazioni</a>
+	<a href="/">Statistiche</a>
 </body>
 </html>
