--- a/home.html
+++ b/home.html
@@ -1,6 +1,12 @@
 <html>
 <head>
-<title>Home</title>
+	<title>Home</title>
+	<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+</style>
 </head>
 <body>
 	<a href="/accedi">Login</a> <br/>
@@ -9,9 +15,9 @@
 	{% if proiezioni %}
 	<table>
 		<tr>
-			<th>Film</th>
 			<th>Data</th>
 			<th>Sala</th>
+			<th>Film</th>
 			<th>Durata</th>
 		</tr>
 		{% for proiezione  in proiezioni %}
